[tool.poetry]
name = "kaseq4-cowsay"
version = "0.1.0"
description = ""
authors = ["Benjamin Mark <benjmark@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
gunicorn = "^20.0.4"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
